--- a/src/LangPad/Editors/NotebookEditor.resx
+++ b/src/LangPad/Editors/NotebookEditor.resx
@@ -127,11 +127,11 @@
   <data name="PageUpToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAALBSURBVFhH7VU7i1NBFI6VFrqInSgKEl1EZJFEZUUMWsTG
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAALBSURBVFhH7VU7i1NBFI6VFrqInSgKEl1EZDFBZUUMWsTG
         kPf7/dykWMSFFGn0D6RIKkE2WKQSDIQl4F/YIp1NTCFoIcq6rusjWKwZv284V2QbE00CC/ng4547Z+ac
         75yZO9c0xxwHGqurqwvlcvmYvM4WxWLxXiaT2c1mszu5XO6ODM8GSHg3Go3+yOfzikylUgM8b4t7ukDV
         t8Lh8HdUrgqFgibtUCj0Bb5lmTYdpNPpm263+xueCl1QKysrmuwCkqt4PL4L33WZPlmgzTcikcjXZDKp
-        kxntN8guYI7C1nzG86osmwyQ2BIMBndisZhOwmQku2CQ7+xMIpFQ2KJtzF2S5f8H7O0Vj8fzCSJ0cApg
+        kxntN8guYI7C1nzG86osmwyQ2BoMBndisZhOwmQku2CQ7+xMIpFQ2KJtzF2S5f8H7O0Vj8fzCSJ0cApg
         B/aTyUl2CF1QEPwRay5LmH9DIBBYcjgc26iI+6sFGGSiP5OSho9zuQbCt1DAJQk3HlDBRa/X+wEidEVs
         P8nACKptJiKlYv00xujnmM/newch5yXsaMCiEzjt7/HUCdl+konBAU7+K44bojheKpVe0sdxCiG5xu/3
         sxNvsU2j35gIarbZbD9ZPatgAtrgoNPpPFxbW3thVEzSX6lUnm9sbDzC+IDvRqc4z2q17kHMWQn/dyil
@@ -139,59 +139,59 @@
         BS2KYoUkbQqQdYvtdluLsFgse/V6/THGxr+c0IVDFLG5ufmg3+8XjeQEBeCA6grZYtqGAAJzzb1er9Tt
         du/DvsZY4hoPIsIMnpIhDdx8LRwsXTlJG/+E3wIIrDmN9efkdbLAzdfCV8JPTJP2fgFTBS6fltPp1JWT
         tNGV2QnAvf8MN6TCV6JJGwLWxT19NBqNGA7fG1S/ReJLeN1sNt3inj5wuM7gkIXAsJD2SXHPBhBxBDxK
-        IvlhGZ5jjoMGk+kXFlMY3Bae518AAAAASUVORK5CYII=
+        IvlhGZ5jjoMGk+kX6zYY1iHgWngAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="PageDownToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAKwSURBVFhH7VbJjlJBFKXVdmPauTW67J2J/8CCNfM8jzIo
-        hKFh5YJvcG2MLExc2P4JC0JIIIg40CRIWLHW9zynUtXBaNKoPJJOOMnJq3dv1b3n3lu8YNphhwuLUql0
-        WKlUjgqFwlE+n78nzdtBJpOxp1Kp78lkUictFssPvAek23ig6hfpdFrP5XKCXGez2VfSbTwajcZrVMyk
-        guxCtVp9J93Go16vtxKJhI5RCHJdq9VOpNt4IFkrHo+L1pNc40JuXkCz2bwUCoXySOCWJgG0uxWNRkXr
-        yVgs9puAcDjsDAaDRa/Xe1ma/hp7fr//ZSAQ0PHUEfC5tJvK5XIrEomI1pNcw3YmAImf+nw+jecg4L3Z
-        bL4iXesDB98giAhOIpiGbhzTVywWW1iLykmI0/FdEAJgrzI5bdyDOORbuPboXwto7yO32y0CkxTAJwOj
-        uhoF4KlzDCQTwXaCbonkfFcCSJfLxbOPZfjz0e/3D/B161K9CqYCwqYh2IQClDC2Gr4ZfbSrM1yzEPxk
-        ++12+4YMfz50Xd9fLpcufGS6Ho9HBFICuJYJfxFGG++LEsA1z+ICf5jNZkHEvCrDrwdN064tFgsP1TOQ
-        Cr7KVQH0qz0Uw8oxno/T6TSM5OtXvwqIOJjP535ctAEDrlb5J9KH8YiZ4/3LeDyOI/ktGe7fABHXISKI
-        aobyMp0JWSVtvDPcg658HY1GCZy9LcP8HyiCrUQnxg6HQyRSQlRijsnpdLLy0+FwmMKZO/L4ZoBW3pxM
-        JhFU98lut4sZMynJNYXhOev1elkkP5THNgvOk3NF9Z9tNptoN0lBsH3rdDp5JDf2zwlE3B0MBmkkPLVa
-        rToJMXMkLyD5fbnNWFAEWv0EF7OLkfTwkXmG5A+leztgq0E36AEfSPN2gU7sk/J1hx0uIkymn9hwHzSJ
-        fU12AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAKwSURBVFhH7VbJjlJBFKXVdmPauTW67J2J/0DCnnmeRxkU
+        wtCwcsE3uDZGFiYubP+EBSEkEEQcaBIkrFjre55TqepgNGlUHkknnOTk1bu36t5z7y1eMO2ww4VFqVQ6
+        rFQqR4VC4Sifz9+T5u0gk8nYU6nU92QyqZMWi+UH3gPSbTxQ9Yt0Oq3ncjlBrrPZ7CvpNh6NRuM1KmZS
+        QXahWq2+k27jUa/XW4lEQscoBLmu1Won0m08kKwVj8dF60mucSE3L6DZbF4KhUJ5JHBLkwDa3YpGo6L1
+        ZCwW+01AOBx2BoPBotfrvSxNf409v9//MhAI6HjqCPhc2k3lcrkViURE60muYTsTgMRPfT6fxnMQ8N5s
+        Nl+RrvWBg28QRAQnEUxDN47pKxaLLaxF5STE6fguCAGwV5mcNu5BHPItXHv0rwW095Hb7RaBSQrgk4FR
+        XY0C8NQ5BpKJYDtBt0RyvisBpMvl4tnHMvz56Pf7B/i6daleBVMBYdMQbEIBShhbDd+MPtrVGa5ZCH6y
+        /Xa7fUOGPx+6ru8vl0sXPjJdj8cjAikBXMuEvwijjfdFCeCaZ3GBP8xmsyBiXpXh14OmadcWi4WH6hlI
+        BV/lqgD61R6KYeUYz8fpdBpG8vWrXwVEHMzncz8u2oABV6v8E+nDeMTM8f5lPB7HkfyWDPdvgIjrEBFE
+        NUN5mc6ErJI23hnuQVe+jkajBM7elmH+DxTBVqITY4fDIRIpISoxx+R0Oln56XA4TOHMHXl8M0Arb04m
+        kwiq+2S328WMmZTkmsLwnPV6vSySH8pjmwXnybmi+s82m020m6Qg2L51Op08khv75wQi7g4GgzQSnlqt
+        Vp2EmDmSF5D8vtxmLCgCrX6Ci9nFSHr4yDxD8ofSvR2w1aAb9IAPpHm7QCf2Sfm6ww4XESbTT7H0HzEP
+        aIvfAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="AddToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAZnSURBVFhH7ZV7UM15GMZ/61IzrNXYQRSnUtSR7aKWECmS
-        S5tbKpVDtjpFF7XVbgftoOS27rmU3KpVdKhGThciDlrknktJF93MrMsy+8dinv2+P99jxp61K+ufnfHM
-        PNPb+77P5/1WMx3hk/5v+qzHHMGgt6yjk3VsT5nTsn4KMtXUoxntvF79iBoaJHTuL9d1dk02zQnLmlSd
-        XiF7UXBrI07V70d53T5Qnf6L7EVY1sTq8atMsyWBumMpw+P/TX1kgrlzknF2cmnA08o2JW4+z8G5J2tQ
-        9kiBkl+jRJc9ihd7NKt8qERyqf8Tl5VGWd28hIEc82EyYD+Jf6r9tVP1aah4koK8tkDktvpC2ebH7I/D
-        3PR9LvOh1tniTsXjFJTVp2J2ml2VCfvNcVz7ZByiO05+wKnx3MPdyG9diMymGfi5aSYONM9CdosXclq8
-        33J2s5c4o53MpunIa12Ac217IM9yaiQWx76f9P0FC+8dNtdPtaQgq9EXexq+wd5GD+xvnIqMB9OQ+WC6
-        +KAsbqqpR7N9bGcv299T7y5mieG90+Ym/Slf0/9FpmGC7pgVhrlHqlcgq06G1NpJSLs/Gel1U7CbQQmc
-        VusOddsuNDy7JJpq6tFsN9vbxUyZ1HsTRcaRuyvgmGiQI/UUdPiZd8swqKNbbK77U2VDFFLuumJb9QTs
-        qHHDTgYTH8O8ucoVV1qKoRHV1KMZ7dDudpahLDEON0QjNnfyU0O57gR+5h3yFDqOStTPP1SjwJZbbth0
-        ywVbbo/D1jvj3zxmO/P66y6obC7i5yHW1KOZ5ihlNrOsyLg1EQfvxmPkcv08IUHowK9pq/tswcQ3zaom
-        s0aOddfHYP0NJ2y4ORYbq5xFEAHpQWuujMWlJhU/D7GmHs00RylD2Z8Yg1gZjOmdblvdXSYY8XPa6hes
-        46FQDX655YYHVl91xJpro7GWhQlAoPUMSNDkS6Nx4cExfh5iTT2a0Y7m6FqWX8M4q66MwtYbUxGvkr7s
-        G6Tjzs9pyzKuW3Ri+VSsvuyMpMoRWHl5JJIujkRx3WZUtOS88fnmHLQ+q+PnIdbnm7Pf2qFM4kXOYKxV
-        lWOReNID0phui/g5bVn/oLcuWe2B5RccsOzCMKy4OBzx5faof1zFT72/KEPZ5YxBLGImMbaNQm8tP6ct
-        q/gvNiwrd0PCeXtmO/xYYY+4MlvUPbrJse8vylCWGEsZi5jEZj/ken5OWxYxXWJii0ZjidoeCrUNFp+1
-        RfRxaxTfycDVptNv+fHvD/kpiPVf58W3M8QsMYi15OzXiGFsaUzXaH5OW8YhOp7uh+1eLVYPR1z5V/j+
-        tBUiS4Yg4JAF5h4wZ7bAPG71/Xx+HmKt6dMO7QYcNBezxCDWkjPDMVk59JWBXGcGP6etL32FQR4pxrVL
-        1Y6IPmmJ78hllogstcSiEubSIYhiDldZQl1XwM+zB7CaejQT95gjSwaLWWJElw0GMadsMrrXzUcw4+e0
-        RZ/hNkv0ihafdELkcSmzBRadkCKKAQiieVR4kVTrN0A9zTFyFMtRlhjEUjCmtUJPxf4RdeLn/l79gjvM
-        8tkteRZzwg5hxQMRVjII4aXmiOAmYGjhIJypzePnIdbUo5lmL5zlKLuQMWLK7DAtxeS5UUhnL37m3erp
-        KXxupeiuWqQahrAic4SoTBFaZIYF3AQMLjDF0ap0tP32QDTV1FvAZpq9UJaj7ELGiDw2DIxZ2NtP6MrP
-        /LN6+XdyGLWqd3Uke0TQUTMEHjVhX00QXDhA9Pw8Y3ju649paa9NNfU0c9p9nTFDpMoejsk97hGT499P
-        hsEdfJ039XsYXjgc8/PNMJcdmEfOp69G8D8kgd9BI9FUz2U9mtEemTIRhQ5w3WDYZhjawYdj2yH2ydiH
-        PcJhZd/a8IIxkBfYwldpDN9ciWg/5dvW9GmHdsNYxmFlz4b+gZ39icWp7ZNcLu9lF2ARYBunf3VGquRF
-        dOEEhBY4QKaUwufgAHhlS0RTTT2a0c6UnX3+sInrfdluvuU8YnBc++Xn59eVAQZ5B86cPEwu3WYV26fG
-        bbXk2ZyMEVignIDoAg/RVFPPlc3s2I5DsDSFMpQlBsd9uCIiIvSCgoLMZcG+Ti7zR4XYBw/cYb1QUmAT
-        YaAm24ZL8u3lA7eP+9ZRTju0Sxke//jy9PTsmJCQoMMOdSFTTT0+/qR2SBD+BIJPeBUKDG1NAAAAAElF
-        TkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAZlSURBVFhH7ZVpTJRnFIW/okKitRIbFQUdQFAYsSxCFRVl
+        UcStuCEg4CgWGFAWoUDLiDQqiFvdcQFxQyooo0BENkXRUamKOy4gsshmUpdq+qPWnL73450mdGor1j9N
+        PMkJl3vvee4LJIzwUf83fdJ7vqDfT9bF0Sqmj8xxxUAFmWrq0Yx22lc/oEYECt0GyXWcXZNNskMzp1Sn
+        V8he59/djLP1B1FedwBUp/8kex2aObl64hqTLEmAjhNlePy/qb9MMHNOMspKLvV/UdmmxJ1X2bj4fB3K
+        nipQ8nOk6LKncWKPZpVPlEgu9Xvustows6enMIRj3k/67CfxS7W7ebY+DRXPU5DbFoCcVh8o23yZ/XCM
+        m77PYT7aOk/cqXiWgrL6VMxLs60yZr85juucjIJ1JsgPOzZefLIXea1LcKhpNn5smoPDzXOR1eKJ7Bav
+        Ds5q9hRntHOoaRZyWxfjYts+yDMdG4nFse8mPT/B3GuX9a2zLSnIbPTBvoavsL/RHQcbZyDj8UwcejxL
+        fFAmN9XUo9kBtrOf7e+rny5mieG12/oO/Snb6f8ik1BBZ/wqg5zj1auQWSdDau0UpD2aivS6adjLoARO
+        q50OVdseNLy8Kppq6tFsL9vbw0yZ1IeTRcbxB6vgkKifLfUQtPmZt8sgsItbTM70F8qGSKQ8cMWO6knY
+        VeOG3QwmPoZ5a5UrrrcUQy2qqUcz2qHdnSxDWWIca4hCTM7UFwZynUn8zFvkIXQZm6iXd7RGgW133bDl
+        rgu23ZuA7fcn/vmYncwbb7mgsrmIn4dYU49m6qOU2cqyIuPuZBx5EIcxK/VyhQRBi1/TVK95grFPmmXN
+        oRo5Ntwaj423HbHpjhM2VzmLIALSg9Zdd8LVpkJ+HmJNPZqpj1KGsj8wBrEyGNMr3aa6l0ww5Oc0NTBI
+        211RKP192213rL3hgHU3x2E9CxOAQBsZkKDJV8fh8uOT/DzEmno0ox310fUsv45x1lwfi+23ZyCOsQcE
+        ak/n5zRlEdszKrF8BtZec0ZS5WisvjYGSVfGoLhuKypasv/0peZstL6s4+ch1peaszrsUCbxCmcw1ppK
+        JySecYc0uudSfk5TVt/pbkhWuWPlZXusuDwSq66MQly5HeqfVfFT7y7KUHYlYxCLmEmMba3QXc/Pacoy
+        7rNNK8rdkHDJjtkW31fYIbbMBnVP73Dsu4sylCXGcsYiJrHZD7mRn9OUeXT36JiicYhX2UGhssayCzaI
+        OmWF4vsZuNF0roOf/fqEn4JY/3VefC9DzBKDWPEXvkQ0Y0uje0Txc5oyCtb2mHbM9s0y1SjEln+Bb89Z
+        IqJkOPyPmmPBYTNmcyzkVj3K4+ch1uo+7dCu/xEzMUsMYsWfH4UpyhFv9OXas/k5TX3uIwx1TzGqXa5y
+        QNQZC3xDLrNARKkFlpYwlw5HJHNYoQVUdfn8PHsAq6lHM3GPOaJkmJglRlTZMBBz2hbDhz29BVN+TlP0
+        GW4dr1u07IwjIk5Jmc2x9LQUkQxAEPWjwoqkGr8B6qmPkSNZjrLEIJaCMa0UuoXsH1FXfu7vNTBIa673
+        XsnL6NO2CC0egtCSoQgrNUM4NwFDCobifG0uPw+xph7N1HthLEfZJYwRXWaLmSnGrwyDu3nyM29XHw/h
+        U0tFr8KlhSMRWmSG4EIThBSZYjE3AYPyTXCiKh1tvzwWTTX1FrOZei+E5Si7hDEiTo4EYxb08xV68DP/
+        rL5+Xe3HrulXHcEeEXjCFAEnjNlXYwQVDBa9KNcIHgcGYWZau6mmnnpOu+0ZU0QU2sEhufdDYnL8u8kg
+        SMvHecvAJ2EFo7AozxQL2IGF5Dz6agi/oxL4HjEUTfUC1qMZ7ZEpE15gD9dNBm0GIVreHNsJsU/G/uwR
+        9qsH1Iblj4c83wY+SiP45EhE+yo7Wt2nHdoNZRn71X0aBgV08yMWp3ZOcrm8r62/ub9NrN6N2amS11EF
+        kxCSbw+ZUgrvI4PhmSURTTX1aEY703b3/806tt8120UWC4nBcZ2Xr69vDwYY6hUwZ+pIuXSHZUz/Gre1
+        kpfzM0ZjsXISovLdRVNNPVc2s2U79kHSFMpQlhgc9/4KDw/XDQwMNJMF+Ti6LBobbBc0ZJfVEkm+dbi+
+        imwTJsmzkw/ZOeFrBznt0C5lePzDy8PDo0tCQoI2O9SdTDX1+PijOiFB+ANrMXgSMgXK6wAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <data name="RemoveToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -229,8 +229,8 @@
   <data name="DuplicateToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAALPSURBVFhH7ZbLTlpRFIZN06SjDpsOOmHApKP2DfoGndj0
-        NQhDXoBHwAmEaIIkGmAGkTvKRVRECI5U7opcFdg1bYHu7n/3bLJjoOcc2iF/8k24rPWvtf+zYWOttZ7r
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAALQSURBVFhH7ZbLTlpRFIZN06SjDpsOOmHApKP2DfoGndj0
+        NQhDHoBXwAmEaIIkGmAGkTvKRVRECI5U7opcFdg1bYHu7n/3bLJjoOcc2iF/8k24rPWvtf+zYWOttZ7r
         8PDwTSwW+5FOp6le2Pdm0Wj0k1JqNbEihnw+/zSbzeh0OtUMPl8qlZ5CodCmUmo1BQIBw9HRERmPx/Tx
         8VEzo9GI5nK50X8xkEgkCAo+PDzMGQwGtN1uL6Xb7dLj4+OR3+//opRaTTAQj8fJcDjkTQX9fp/e3Nyg
         Cc1mswth+Zmy716xY8w+h70eSiaTr5U2ywUDkUiEYOperzcHE15eXtJKpUInk4lumPHvzIhBabNcPp/P
@@ -239,31 +239,31 @@
         c3p6esqLyvlQA1tArjQZcLvd3ADWjqaCRqPBp8fjhnxgQ1qBYXZBEQyntFkuYQArr9frc2q1Gj05OeH3
         AIrK+VADW0BNXQawdjQVVKtVPn0qleJPhZwPNWBYtwGsHU0FuIAwvTCADWlFt4H9/X2CtZfL5Tm4hjOZ
         DJ5nPpWcDzVwDDCA2kqb5XI6nYa9vT2CtaOp4Pr6mk/Pfqj4VAilVmBYlwGXy/VNPn+RAfzpYBcKn+r5
-        +38DedJswGKxvN3e3m7u7Oz0ZdhrfZvNRhwOxy9MJedDDRjWbEDRy0Ww5l/Z78QI+UAotQLDyJUeAwvF
-        NrF5cHAwxFRyPtTAMSBXOF6l1GpiBTaxAaxUvqTUwOexgX82YLfbP+/u7v70er1jvVit1unW1tY7pdRq
-        MhqNr8xm8weTyfRxBd6zEi/+VFprLaGNjd+PfcRULQjQ2QAAAABJRU5ErkJggg==
+        +38DedJswGKxvN3e3m7u7Oz0ZdhrfZvNRux2+y9MJedDDRjWbEDRy0U4HI6v7HdihHwglFqBYeRKj4GF
+        YpvYPDg4GGIqOR9q4BiQKxyvUmo1sQKb2ABWKl9SauDz2MA/G2Dn/3l3d/en1+sd68VqtU63trbeKaVW
+        k9FofGU2mz+YTKaPK/CelXjxp9JaawltbPwGeSHETk9pUD0AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="RenameToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAOiSURBVFhH7ZZ7SFNxFMfV3vnKXvZ0j0LJwIT+CsoHVrPy
-        MSuYRbAeK1wZSiXRP92CigJTai2UimIkFaiLPWyldXMWPdiKSClL08ph9rQyV3PzdE67E1tGs671T1/4
-        wr2/e879nHN+v3Hn918DKSaeGbxz6datuRLFTG7p74ngR9ccqK9kSrtvFmjtp3IOVzEME8A9Hli54Qfr
-        r+7Tdb8zPgWn+S3UlLCuUxuP1P2NIgLEkwW6/QzjrNPchM+X2+CtoRnatI/BfJp1HVcWXOLiBkQBMTEx
-        NGpnWVkZNDY2wm3NVWguuQdv9E3wqbIVTIy+M3vBKhEXz6sCoqOjjQTXarVgtVrBbDZDcXExXD9eCe9x
-        K16UPwK2oNKVs3CDjMvhTf4hISG6lJQUB3Xe0NAAFRUVYDAYwGQyAXvlCtxWVwGrYl2H1uyzcjm8yT8w
-        MFCP3TvT09MhLy8PioqKQK/XAxVjNBpBpVIBk8I4VKv33OFyeJN/UFCQ0QPPysqC1NRUSEpKgsLCwm9b
-        oFargSYzJXyShsvhTTR2gzc8MTERkpOTQaFQQH5+Psjl8q6oqKjzXA5vInjP2L3hmZmZkJCQALGxsV8i
-        IyNLKd6dxo98gguFQicdTIp3p/EjgpcLBIIugiuVyh/gdM3BDRTvTuNH/sHBwWX/HC6VSr+DSySSHrhI
-        JHLhr+IixbvTeFJoaOjZfwk/0xuelpbWA5fJZN5wfr90/YDTF45f+K4d8dXbcuMcGRnuA9cXXCwWOxFe
-        geH8jr3p1uIJrS3HWh7cZ1012g32lSsk3X3AqfMLGM4vnNRcu1H9xW4Dx+dW6Pz4AG6Y1nYuXxrX7QU3
-        Yeivxk7FUYzvRVoss4e0PNlbS3B7xyPoaLdA+6sq0JYuss9PSvDA+zpwBBmMHooexpmuaW0Q2rcimmvX
-        rrfZdA4P/P1rFt616eAGW+iSywVdvQ4cvZQgI9HB6BB0EDoQPQI9HE0FDEFTrG+H9Fndlmve8JfPT8BD
-        q/LF9tyouxgShh7LeTR3H4r+WQE0Ad+2IXvdDFmJZtOHjnbrN7itiXFYri+rrzbOPbctZ9IcDJmIDkeP
-        R1MBY9BUwCi0pwACU9e+ddxbcXOFNpFoKpw8Jv9oqZbe0Wpm7Y6IGCbGR1PQk9FUwAS0pwCCE5S2gsb8
-        +8pWRIqEgjBn/LypT6VLxslxif65CtARaA98HJo6pS7/DOitzeunT8vICKfOPHvW/xH+V7/l5/cVVz4l
-        MpGKV7EAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAOjSURBVFhH7ZZ7bEtxFMe3eQx7ec9zfZAtJpkl/pKwR4YO
+        e3RIOiKpR8nKZAsW8Y9L4hHJbKEqWxDSWBCmrO3UNq7VW1pCNozNhjUzz2FWunbHOXq7TE103PGPb/JN
+        7v3dc+7nnPP7Nbc+/9WbYmKZvpvnr1+fLVFM5pb+ngi+f9mumjLmZMeNPK3tSNbeCoZh/LjHvSsXfHcN
+        u/1sxzvDU3CY3oKpiHUeWb2v+m8U4SceKyjZyTCOas0N+HyhGd7qG6BZ+xgqj7LOg8q8Mi6uV+QXFRVF
+        o3YUFxdDXV0d3NJcgoaiu/BGVw+fypvAyOjaMmctEXHxvMovMjLSQHCtVgsWiwVMJhMUFhbC1YPl8B63
+        4sXpR8DmlTuzZq+ScTm8yTc4OLgkKSnJTp3X1tZCaWkp6PV6MBqNwF68CLfUFcCqWOeeZTssXA5v8g0I
+        CNBh947U1FTIycmBgoIC0Ol0QMUYDAZQqVTAJDF21dJtt7kc3uQbGBhocMMzMjIgOTkZEhISID8//9sW
+        qNVqoMmMCx2j4XJ4E41d7wmPj4+HxMREUCgUkJubC3K5vD0iIuIMl8ObCN45dk94eno6xMXFQXR09Jfw
+        8PBTFO9K40dewYVCoYMOJsW70vgRwU8LBIJ2giuVyh/gdM3B9RTvSuNHvkFBQcX/HC6VSr+DSySSTrhI
+        JHLir+I8xbvSeFJISMjxfwk/1hWekpLSCZfJZJ5wfr90PYDTF45f+JZNsZUbsmPsaWmuA9cdXCwWOxBe
+        iuH8jr3+5txRTY0HGu/fY52XtatsixdJOrqBU+fnMJxfOKmharX6i80K9s9N0PbxAVw3Lm9bOD+mwwNu
+        xNBfjZ2KoxjvizSbp/ZrfLK9iuC21kfQ2mKGllcVoD01xzYzIc4N7+7AEaQvuj/anzNd01oftHdFNFQt
+        X2m1ltjd8PevWXjXXALX2HynXC5o73Lg6KUEGYQOQgejA9EB6IHoAWgqoB+aYr07pM+q113xhL98fgge
+        WpQvNmZH3MGQIejhnIdy9yHonxVAE/BuGzJXTJIVadZ8aG2xfINb6xm7+eqCmkrD9BMbssZMw5DR6FD0
+        SDQVMAxNBQxGuwsgMHXtXcddFTNdaBWJxsPhA/KP5krpba1mytawMH8xPhqHHoumAkah3QUQnKC0FTTm
+        31emIlwkFAxxxM4Y/1Q6b4Qcl+ifqwAdhnbDR6CpU+ryz4CeWrty4oS0tFDqzL1nPR/hf/VYPj5fAdqi
+        JSc5r/J/AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="ImportToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -291,23 +291,23 @@
   <data name="ExportToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO4SURBVFhH7ZbrT1t1HMa7xfkH8MKQLMoLE9+YmGyZSiDQ
-        jHUZMMWJUOrQDWamxE3NNNGZrKksXmJiI4lbO9gWyuiFO1R6GC2lHSsphzRlTAMl3Huj7emN6xsMPvLr
-        jnshh9pD95In+eTknJzzPM/3dy45gn3t67+SyWQHxeKqo2JxtehZ8Z7k3Kus/f9LIrlwTKFolLvdvpHF
-        xUU6bdxuu6z2px8rKi6+zEYkV5nkfKHX6xvd2trC5uZm2hAf59jjXomk+k02IrlIAbvdodvY2MDa2lra
-        EJ9ufZ9SLD6fzUYkFylgs9G69fV1rK6u8iISi0OhH8aCL/j0GPHp7jEoeBV48MCuIxcvLy/zwh9kUHlD
-        j48bKDhd84ljxKezew8FVlZWEI/HeeELhFCppFBLeyBRUOixjSdK7KkAMYxGo7zw+AOouEnhV9cKro8x
-        KL1tgcIwAm171y2eBYa1sVgMkUiEE53ViSsq8w6+aDShqI6CdHwZn47GcNUZQ0mTHUXS+rETpRdFbERy
-        PSlg05IghmE4+U5nRbHuT1T2e3ZwbnAJn9FxlFkiODsUxaWROIRq61bWJ78NCESfv8TG7C5SwGKxacPh
-        MEKhECcyrRVvt8/gfVME5f3cvNMXTvDu/TA+NEcT52d9qXp4qPDb19gobpECAwNDWjJpIBDgRNo8iEL1
-        NMp7wyj9nZvT3UyCkh4GEioMUW3/3y9eVlmfL7r6ChvFrScrMKQJBoPw+/2cXLtnxhtyGvnKP3ZQcGcK
-        ZV1hnGoJ4XTb9oPYFUKWnP7rcJVcLzj51QtszO4iBcxmq4ZM6vP5OKGGH6Gu8+FT5K0W/Kwx4bqKglDW
-        iTM6BsUaBm+pA8j9YRCnvlbQhWXVQjYiuUgBo9GiIZN6PJ6UmJubw+TkJOyjDhyXtuPMPQYnb7mRJ+tF
-        XasJd5vU/F5Do9GsIZO63e6UmJ+fx9TUFGiHE8evdSDvFxdOSDvQdn8Is7OzaGpu4fch6uszashkCwsL
-        KTM9PQ3H2Djyv2lF+fcdMNtoTExMJMqpte03eRf4d7JUIbdhYtKFOm0/HI8ew+VyJUoRH1Vzyw1eBQwG
-        k5pMRZaPLzMzM4lgsiX72z8leytApiIm6UIGUal0/Apsfwe6lpaW4PV604b4tHXo76b6R3QwP19UXPVR
-        TWNDg8qgVDYY06W+/g519oMLt3NzRSmtwIHMzMyso69ni3PyCmqyc4RX0iUnp6DmyJFjJRkZGYfZjJR0
-        QCgUPre9PfQMID772tcuEgj+AW3PQD8Qdhd+AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO3SURBVFhH7ZbrS1t3HMbTsu4P8MUQyuaLwd4MBi3dJoqG
+        2pSq3VznNGZ1a7WjnexKN9g6aEhbdmGwMGFtUm2LsebiXTNz1MSY1EbikRBrNzTiPTeTnNy8vnG4Z/7S
+        s76YxyzH9KUPfDicwznP83x/58IR7Gtf/5VMJjsoFlcdFYurRc+K9yTnXmXt/18SyYVjCkWD3O32jSwu
+        LtJp43bbZdd/+rGi4uLLbERylUnOF3q9vtGtrS1sbm6mDfFxjj3ukUiq32QjkosUsNsduo2NDaytraUN
+        8enS9yrF4vPZbERykQI2G61bX1/H6uoqLyKxOBT6YSz4gk+PEZ+uboOCV4EHD+w6cvHy8jIv/EEGlTf1
+        uFRPwemaTxwjPh1deyiwsrKCeDzOC18ghEolheu0BxIFhW7beKLEngoQw2g0yguPP4CKWxR+da3gxhiD
+        0jsWKAwj0LZ13uZZYFgbi8UQiUQ40VmduKwy7+DLBhOKailIx5fxyWgMV5wxlDTaUSStGztRelHERiTX
+        kwI2LQliGIaTazorinV/orLfs4Nzg0v4nI6jzBLB2aEoPh2JQ6i2bmV9/NuAQPTFS2zM7iIFLBabNhwO
+        IxQKcSLTWvF22wzeN0VQ3s/NO73hBO/2hfGhOZo4P+sr1cNDhd+9xkZxixQYGBjSkkkDgQAn0qZBFKqn
+        Ud4TRunv3JzuYhKUdDOQUGGIrvX9/eJnKuvzRVdeYaO49WQFhjTBYBB+v5+Tq/fNeENOI1/5xw4K7k6h
+        rDOMU80hnG7dfhA7Q8iS038drpLrBSe/foGN2V2kgNls1ZBJfT4fJ9TwI9R2PHyKvMWCnzUm3FBREMo6
+        cEbHoFjD4C11ALk/DOLUNwq6sKxayEYkFylgNFo0ZFKPx5MSc3NzmJychH3UgePSNpy5z+DkbTfyZD2o
+        bTHhXqOa32toNJo1ZFK3250S8/PzmJqaAu1w4vjVduT94sIJaTta+4YwOzuLxqZmfh+i3l6jhky2sLCQ
+        MtPT03CMjSP/2xaUf98Os43GxMREopxa23aLd4F/J0sVchsmJl2o1fbD8egxXC5XohTxUTU13+RVwGAw
+        qclUZPn4MjMzkwgmW7K//VOytwJkKmKSLmQQlUrHr8D2d6BzaWkJXq83bYhPa7v+Xqp/RAfz80XFVR/V
+        NNTXqwxKZb0xXerq7lJnP7hwJzdXlNIKHMjMzMw6+nq2OCevoCY7R3g5XXJyCmqOHDlWkpGRcZjNSEkH
+        hELhc9vbQ88A4rOvfe0igeAfXYJAPZtOAcEAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
