--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,7 +18,8 @@ Version 11.0 (June 30, 2020)
    • Easier resizing of images before insertion
    • Pressing CTRL+S on character editor and dictionary now saves the notebook
    • Display shortcut keys on menus
-   **• Add menu a shortcut keys to dictionary
+   **• Add menu and shortcut keys to dictionary
+   • New words are automatically selected in dictionary
    • Added tons of shortcut keys to make all across the program
    • Custom characters can be assigned to keys CTRL+1 to CTRL+0
    • Character insertion now respects caps lock
