--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,6 +20,7 @@ Version 11.0 (June 30, 2020)
    • Display shortcut keys on menus
    • Add menu and shortcut keys to dictionary
    • New words are automatically selected in dictionary
+   • Added alternating colors to dictionary grid 
    • Added tons of shortcut keys to make all across the program
    • Custom characters can be assigned to keys CTRL+1 to CTRL+0
    • Character insertion now respects caps lock
