--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ Version 12.0 (TBD)
    
 Version 11.2 (TBD)   
    **• Sections in dictionary
+   **• Undo/redo in dictionary
 
 Version 11.1 (TBD)
    **• Frequently used characters tab
