--- a/src/LangPad/Dialogs/AboutDialog.resx
+++ b/src/LangPad/Dialogs/AboutDialog.resx
@@ -130,7 +130,64 @@ Redistribution and use in source and binary forms, with or without modification,
 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</value>
   </data>
   <data name="ChangelogTextBox.Text" xml:space="preserve">
-    <value>Version 10.0 (April 8, 2020)
+    <value>**Version 11.0 (June 30, 2020)
+   • Easier resizing of images before insertion
+   • Pressing CTRL+S on character editor and dictionary now saves the notebook
+   • Display shortcut keys on menus
+   • Add menu and shortcut keys to dictionary
+   • New words are automatically selected in dictionary
+   • Added alternating colors to dictionary grid 
+   • Default dictionary display font is now larger
+   • Opening a dictionary now adds the new words to the current dictionary, instead of replacing them
+   • Added tons of shortcut keys to make all across the program
+   • Custom characters can be assigned to keys CTRL+1 to CTRL+0
+   • Character insertion now respects caps lock
+   • Allow the adjustment of bullet indent
+   • Support hanging indent
+   • Reset indent menu option
+   • Remove tabs (which were redundant with the sidebar and slowed things down)
+   • Add "New Window" menu item to easily open a new LangPad instance
+   • Paste images directly from File Explorer
+   • Show current line in status bar
+   • Add options to wrap selected text in brackets [] and // or remove brackets
+   • Zoom in increments of 0.2 (a less drastic jump)   
+   • The page title of HTML documents now matches their name in LangPad
+   **• Exported HTML tables from the dictionary can now have their colors changed
+   • Now has a dedicated installer
+   • Use AutoUpdater.NET instead of custom autoupdater
+   • PageNameDialog title changes depending on the mode (add/duplicate/rename page)
+   • PageNameDialog text box is now automatically focused when opened
+   • Add Patreon, GitHub, and website links to about box
+   • Adding, removing, renaming, and changing the order of pages are all *much* faster
+   • Added menu items to move pages to top and bottom
+   • Added menu items to go to the first and last page
+   • Pages are now inserted after the current page, not at the end of the notebook
+   • Smaller sidebar that has been split into two tabs: pages and notebook info
+   • Move sidebar to the left side
+   • Refactor text style code
+   • Improved splash screen
+   • Notebook files are now optimized for compression speed over compression density
+   • Major refactoring to have a more consistent naming scheme and remove old junk
+   • Convert all custom controls to C#
+   • Complete re-write of file handling code   
+   • Complete re-write of theming code   
+   • Add themes: Default Light, Cool Gray, Desert, Luna, Metallic, Luna, Olive, and Whiteout 
+   • Bug Fix: Old Language Pad 4.x-5.x files could not be opened
+   • Bug Fix: Bad performance when changing font styles on a page that has large images 
+   • Bug Fix: Word count wouldn't update automatically when opening a new file
+   • Bug Fix: Word count didn't include words separated by tab or newline
+   • Bug Fix: Pages with the same name couldn't be imported without changing the name
+   • Bug Fix: Undo/redo would sometimes leave text selected incorrectly
+   • Bug Fix: Replace all couldn't be undone
+   • Bug Fix: Find/replace would sometimes fail
+   • Bug Fix: The bar above on affricate buttons in the character editor could sometimes be clipped off
+   • Bug Fix: Minor alignment issue on color panel with one button
+   • Bug Fix: Encoding on exported HTML pages wasn't UTF-8 by default in some browsers
+   • Bug Fix: Invalid files opened with the open file dialog are now handled properly
+   • Bug Fix: Character editor would sometimes appear behind the current window
+   • Bug Fix: Toggle status bar wouldn't work in minimal mode
+   
+﻿Version 10.0 (April 8, 2020)
    • Full HiDPI support
    • Use Taiga icon pack
    • Add option in settings to load character editor on startup
