--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,12 +2,12 @@ Version 11.0 (May 23, 2020)
    • Easier resizing of images before insertion
    • Pressing CTRL+S on character editor and dictionary now saves the notebook
    • Display shortcut keys on menus
+   • Added tons of shortcut keys all across the program
    • Add menu and shortcut keys to dictionary
    • New words are automatically selected in dictionary
    • Added alternating colors to dictionary grid 
    • Default dictionary display font is now larger
    • Opening a dictionary now adds the new words to the current dictionary, instead of replacing them
-   • Added tons of shortcut keys to make all across the program
    • Custom characters can be assigned to keys CTRL+1 to CTRL+0
    • Character insertion now respects caps lock
    • Allow the adjustment of bullet indent
