--- a/src/LangPad/Dialogs/AboutDialog.resx
+++ b/src/LangPad/Dialogs/AboutDialog.resx
@@ -130,16 +130,16 @@ Redistribution and use in source and binary forms, with or without modification,
 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</value>
   </data>
   <data name="ChangelogTextBox.Text" xml:space="preserve">
-    <value>Version 11.0 (June 30, 2020)
+    <value>Version 11.0 (May 23, 2020)
    • Easier resizing of images before insertion
    • Pressing CTRL+S on character editor and dictionary now saves the notebook
    • Display shortcut keys on menus
+   • Added tons of shortcut keys all across the program
    • Add menu and shortcut keys to dictionary
    • New words are automatically selected in dictionary
    • Added alternating colors to dictionary grid 
    • Default dictionary display font is now larger
    • Opening a dictionary now adds the new words to the current dictionary, instead of replacing them
-   • Added tons of shortcut keys to make all across the program
    • Custom characters can be assigned to keys CTRL+1 to CTRL+0
    • Character insertion now respects caps lock
    • Allow the adjustment of bullet indent
