Goodbye, My.Settings and My.Computer

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+Version 12.0 (TBD, 2021)
+   • Move from RTF-based files to HTML-based files
+   • Convert remaining code to  C#
+   • Port to .NET 5
+
 Version 11.1 (June 14, 2020)
    • Bug Fix:  https:// URLs in the website field wouldn't open
    • Bug Fix: Character files imported from the character editor weren't imported correctly
