Start port to .NET 5

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,7 +1,9 @@
 Version 12.0 (TBD, 2021)
-   • Move from RTF-based files to HTML-based files
-   • Convert remaining code to  C#
    • Port to .NET 5
+   • Convert remaining code to  C#
+   • Move from RTF-based files to HTML-based files
+   • Support for tables
+   • Embedded resources
 
 Version 11.1 (June 14, 2020)
    • Bug Fix:  https:// URLs in the website field wouldn't open
